Fix for scrollbar issue on mobile page.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
@@ -16,7 +16,7 @@
 .app-page {
   .app-mobile-navbar {
     &+.app-content {
-      .calc('height', ~"calc( 100% - @{app-mobile-nav-height} ) )") !important;
+      .calc('height', ~"calc( 100% - @{app-mobile-nav-height} )") !important;
       margin: 0;
       min-height: 0!important;
       overflow: auto;
@@ -28,7 +28,7 @@
   }
   &.has-tabbar {
     .app-mobile-navbar + .app-content {
-      .calc('height', ~"calc( 100% -( @{app-mobile-nav-height} + @{app-mobile-tabbar-height} ) )") !important;
+      .calc('height', ~"calc( 100% - @{app-mobile-nav-height} - @{app-mobile-tabbar-height})") !important;
     }
   }
   &.has-tabbar-top .app-mobile-navbar + .app-content {
